--- a/continuous_integration/environment-3.14t.yaml
+++ b/continuous_integration/environment-3.14t.yaml
@@ -22,8 +22,8 @@ dependencies:
   - coverage
   # key optional dependencies
   - numpy
-  # - pandas >=3  # Needed for free-threading  # FIXME race conditions in 3.0.0rc1
-  # - pyarrow
+  - pandas>=3.0.1  # 3.0.0 has major race conditions
+  - pyarrow
   # conda variant of distributed depends on cytoolz, which is not available
   # on conda yet.
   # Manually install distributed dependencies from conda below.
@@ -43,10 +43,10 @@ dependencies:
   # - pyspark  # Huge package; limit where it is tested
   # - tiledb-py  # Not available for 3.14t
   # - tiledb  # Not available for 3.14t
-  # - xarray  # Requires pandas
+  - xarray
   # - sqlalchemy  # Not available for 3.14t
   - jsonschema
-  # - bokeh  # Requires pandas
+  - bokeh
   - httpretty
   - aiohttp
   # - crick  # No Python 3.14 build yet
@@ -70,7 +70,8 @@ dependencies:
   - mmh3
   - jinja2
 
-  # FIXME pull in distributed dependencies from conda (see above)
+  ##### 3.14t temporary hacks
+  # packages normally pulled in by the `distributed` conda package
   - locket
   # FIXME https://github.com/msgpack/msgpack-python/issues/613
   # Install placeholder to prevent distributed below from compiling the C extension from
@@ -81,6 +82,7 @@ dependencies:
   - tornado
   - urllib3
   - zict
+  ##### end 3.14t hacks
 
   - pip
   - pip:
